--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,10 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="%BASE_URL%AI-black.svg?v=3" media="(prefers-color-scheme: light)" />
-        <link rel="icon" type="image/svg+xml" href="%BASE_URL%AI-white.svg?v=3" media="(prefers-color-scheme: dark)" />
+        <link rel="icon" type="image/png" href="%BASE_URL%favicon.png?v=1" />
+        <link rel="icon" type="image/svg+xml" href="%BASE_URL%AI-black.svg?v=4" />
+        <link rel="icon" type="image/svg+xml" href="%BASE_URL%AI-black.svg?v=4" media="(prefers-color-scheme: light)" />
+        <link rel="icon" type="image/svg+xml" href="%BASE_URL%AI-white.svg?v=4" media="(prefers-color-scheme: dark)" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Dasi AI</title>
     </head>
